# credixAssessment

./: README.md
backend/: .gitignore  README.md  pyproject.toml  sql_app.db
backend/src/: app.py  main.py  schemas.py
backend/src/api/v1/endpoints/: hello.py  orders.py
backend/src/core/: db.py
backend/src/models/: order.py  product.py
backend/src/schemas/: hello.py  order.py
backend/src/services/: hello_service.py  order_service.py
backend/tests/: test_app.py  test_hello.py  test_orders.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Modal.tsx  Navbar.tsx
frontend/src/pages/: CheckoutPage.tsx  OrdersPage.tsx
