[project]
name = "credixAssessment"
version = "0.1.0"
description = ""
authors = [
    {name = "Rafael Goncalves Dias",email = "rafaelgdiasbh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)"
]

[tool.poetry]
packages = [{include = "src", from = "./"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "./src"
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'uvicorn src.app:app --reload'
test = 'pytest -s -x --cov=src -vv'
post_test = 'coverage html'
lint = 'ruff check ./src && ruff check ./src --diff'
format = 'ruff check ./src --fix && ruff format'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
